- New Custom Mining Skill Card API `You can create your Custom Mining Skill Card through configs.` Check out the Wiki! - Adding Playstyle Mode option `If you prefer the old style of the mod, Now you can change it back as before.` - Adding Villager Trade and Price option for the Mining Skill Card `There will be an option for which villager level should the card appear and change the price.`